add project & contact images, fix order of projects, add contacts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Example</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,6 +16,7 @@
                 <a href="#about-me">About Me</a>
                 <a href="#tech-stacks">Tech Stacks</a>
                 <a href="#projects">Projects</a>
+                <a href="#contact">Contact Me</a>
             </div>
         </nav>
     </header>
@@ -134,24 +135,6 @@
     <section id="projects">
         <h1>Top Projects</h1>
         <div class="project">
-            <h3>Note Taking Android App</h3>
-            <h4>Tech stacks: Java, SQLite</h4>
-            <div class="scroll-container">
-                <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
-                    <div class="image-list">
-                        <img src="images/projects/bukuinote/1.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/4.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
-                    </div>
-                <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
-            </div>
-            <p>Developed an innovative Android note-taking application reminiscent of traditional
-                writing on a book. Its features include import PDF files and images, handwriting recognition (using either a hand or stylus pen), writing input (handwriting/typing) with multiple properties, and area selection-remove features</p>        
-        </div>
-        <div class="project">
             <h3>Toyota Tapping (OCR) Mobile App</h3>
             <h4>Tech stacks: Flutter, Laravel, MySQL</h4>
             <div class="scroll-container">
@@ -159,10 +142,9 @@
                     <div class="image-list">
                         <img src="images/projects/toyota tapping app/1.jpg" class="project-image">
                         <img src="images/projects/toyota tapping app/2.jpg" class="project-image">
-                        <img src="images/projects/toyota tapping app/3.jpg" class="project-image">
-                        <img src="images/projects/toyota tapping app/4.jpg" class="project-image">
                         <img src="images/projects/toyota tapping app/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
+                        <img src="images/projects/toyota tapping app/4.jpg" class="project-image">
+                        <img src="images/projects/toyota tapping app/3.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -180,7 +162,6 @@
                         <img src="images/projects/toyota tapping web app/3.jpg" class="project-image">
                         <img src="images/projects/toyota tapping web app/4.jpg" class="project-image">
                         <img src="images/projects/toyota tapping web app/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -193,12 +174,12 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/toyota sorting web/1.jpg" class="project-image">
-                        <img src="images/projects/toyota sorting web/2.jpg" class="project-image">
-                        <img src="images/projects/toyota sorting web/3.jpg" class="project-image">
-                        <img src="images/projects/toyota sorting web/4.jpg" class="project-image">
                         <img src="images/projects/toyota sorting web/5.jpg" class="project-image">
                         <img src="images/projects/toyota sorting web/6.jpg" class="project-image">
+                        <img src="images/projects/toyota sorting web/4.jpg" class="project-image">
+                        <img src="images/projects/toyota sorting web/3.jpg" class="project-image">
+                        <img src="images/projects/toyota sorting web/1.jpg" class="project-image">
+                        <img src="images/projects/toyota sorting web/7.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -213,9 +194,11 @@
                         <img src="images/projects/procttor/1.jpg" class="project-image">
                         <img src="images/projects/procttor/2.jpg" class="project-image">
                         <img src="images/projects/procttor/3.jpg" class="project-image">
-                        <img src="images/projects/procttor/4.jpg" class="project-image">
-                        <img src="images/projects/procttor/5.jpg" class="project-image">
                         <img src="images/projects/procttor/6.jpg" class="project-image">
+                        <img src="images/projects/procttor/7.jpg" class="project-image">
+                        <img src="images/projects/procttor/8.jpg" class="project-image">
+                        <img src="images/projects/procttor/9.jpg" class="project-image">
+                        <img src="images/projects/procttor/10.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -228,12 +211,18 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/zanira/Picture29.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/2.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/3.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/4.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
+                        <img src="images/projects/zanira/1.jpg" class="project-image">
+                        <img src="images/projects/zanira/2.jpg" class="project-image">
+                        <img src="images/projects/zanira/3.jpg" class="project-image">
+                        <img src="images/projects/zanira/5.jpg" class="project-image">
+                        <img src="images/projects/zanira/6.jpg" class="project-image">
+                        <img src="images/projects/zanira/13.jpg" class="project-image">
+                        <img src="images/projects/zanira/8.jpg" class="project-image">
+                        <img src="images/projects/zanira/10.jpg" class="project-image">
+                        <img src="images/projects/zanira/11.jpg" class="project-image">
+                        <img src="images/projects/zanira/12.jpg" class="project-image">
+                        <img src="images/projects/zanira/7.jpg" class="project-image">
+                        <img src="images/projects/zanira/4.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -245,12 +234,12 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/bukuinote/1.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/2.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/3.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/4.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
+                        <img src="images/projects/uncrazy/20.jpg" class="project-image">
+                        <img src="images/projects/uncrazy/17.jpg" class="project-image">
+                        <img src="images/projects/uncrazy/3.jpg" class="project-image">
+                        <img src="images/projects/uncrazy/8.jpg" class="project-image">
+                        <img src="images/projects/uncrazy/9.jpg" class="project-image">
+                        <img src="images/projects/uncrazy/6.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -264,12 +253,12 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/bukuinote/1.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/2.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/3.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/4.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
+                        <img src="images/projects/calmsky/1.jpg" class="project-image">
+                        <img src="images/projects/calmsky/2.jpg" class="project-image">
+                        <img src="images/projects/calmsky/3.jpg" class="project-image">
+                        <img src="images/projects/calmsky/6.jpg" class="project-image">
+                        <img src="images/projects/calmsky/4.jpg" class="project-image">
+                        <img src="images/projects/calmsky/5.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -284,25 +273,110 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/bukuinote/1.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/2.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/3.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/4.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
-                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
+                        <img src="images/projects/inventorize/1.jpg" class="project-image">
+                        <img src="images/projects/inventorize/2.jpg" class="project-image">
+                        <img src="images/projects/inventorize/3.jpg" class="project-image">
+                        <img src="images/projects/inventorize/4.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
             <p>I am currently immersed in an ongoing inventory management website project, diligently crafted using Ruby on Rails as its backbone technology. With the aid of Bootstrap for sleek design and JavaScript for dynamic functionality, the website is shaping up to be a robust solution for efficient inventory management. Its structure allows multiple users to join various companies, each of which can possess multiple storage units. Within these storages, users can manage numerous items, track sales, and record purchases, providing a comprehensive platform to streamline inventory operations.
             </p>        
         </div>
+        <div class="project">
+            <h3>Note Taking Android App</h3>
+            <h4>Tech stacks: Java, SQLite</h4>
+            <div class="scroll-container">
+                <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
+                    <div class="image-list">
+                        <img src="images/projects/bukuinote/1.jpg" class="project-image">
+                        <img src="images/projects/bukuinote/4.jpg" class="project-image">
+                        <img src="images/projects/bukuinote/6.jpg" class="project-image">
+                        <img src="images/projects/bukuinote/5.jpg" class="project-image">
+                    </div>
+                <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
+            </div>
+            <p>Developed an innovative Android note-taking application reminiscent of traditional
+                writing on a book. Its features include import PDF files and images, handwriting recognition (using either a hand or stylus pen), writing input (handwriting/typing) with multiple properties, and area selection-remove features</p>        
+        </div>
+            <!-- Additional projects section -->
+    <div class="other-projects">
+        <h2>Other Projects:</h2>
+        <div class="project-list">
+            <a href="https://github.com/edricklimantoro/Subside" target="_blank" class="project-link">
+                <div class="project-item">
+                    <h3>Sampoerna University Basic Student Information Database Exhibitor (Android App)</h3>
+                    <p>#Java #Android Studio #Firebase</p>
+                </div>
+            </a>
+            <a href="" target="_blank" class="project-link">
+                <div class="project-item">
+                    <h3>Dijkstra Algorithm Simulation for Finding Missing Person in the Jungle (Desktop App)</h3>
+                    <p>#Java</p>
+                </div>
+            </a>
+            <a href="https://github.com/MuhammadAkhsanulZidan/smarth-humidifier" target="_blank" class="project-link">
+                <div class="project-item">
+                    <h3>Smart Humidifier (Internet of Things)</h3>
+                    <p>#C++</p>
+                </div>
+            </a>
+            <a href="https://github.com/MuhammadAkhsanulZidan/our_book" target="_blank" class="project-link">
+                <div class="project-item">
+                    <h3>Book Management System (API)</h3>
+                    <p>#Django #PostgreSQL</p>
+                </div>
+            </a>
+            <a href="https://github.com/MuhammadAkhsanulZidan/academicportal" target="_blank" class="project-link">
+                <div class="project-item">
+                    <h3>Student Academic Portal (Web App)</h3>
+                    <p>#PHP</p>
+                </div>
+            </a>
+            <a href="https://github.com/Data-Structure-SU-Group-2/To-do-list-app" target="_blank" class="project-link">
+                <div class="project-item">
+                    <h3>Todo-list (Desktop App)</h3>
+                    <p>#C++</p>
+                </div>
+            </a>
+        </div>
+    </div>
     </section>
-
     <div id="image-modal" class="modal">
         <span class="modal-close">&times;</span>
         <img id="modal-image" class="modal-content" alt="Enlarged Image">
         <div id="modal-caption" class="modal-caption"></div>
     </div>
+    <section id="contact">
+        <h1>Contact Me</h1>
+        <ul class="contact-list">
+            <li>
+                <a href="mailto:akhsanul.zidan25@gmail.com" class="contact-link">
+                    <div class="contact-item">
+                        <img src="images/icons/mail.png" alt="Gmail" class="contact-icon">
+                        <p>akhsanul.zidan25@gmail.com</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://linkedin.com/in/muhammad-akhsanul-zidan-2041711b7/" target="_blank" class="contact-link">
+                    <div class="contact-item">
+                        <img src="images/icons/linkedin.png" alt="LinkedIn" class="contact-icon">
+                        <p>linkedin.com/in/muhammad-akhsanul-zidan-2041711b7/</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/MuhammadAkhsanulZidan" target="_blank" class="contact-link">
+                    <div class="contact-item">
+                        <img src="images/icons/github.png" alt="GitHub" class="contact-icon">
+                        <p>github.com/MuhammadAkhsanulZidan</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </section>
+    
     <script src="scripts.js"></script>
 </body>
 </html>
