responsive design for mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <nav>
             <div class="nav-left">
                 <span class="name">Muhammad Akhsanul Zidan</span>
+                <!-- Toggle Button -->
+                <span class="nav-toggle">&#9776;</span> <!-- This is the hamburger icon -->
             </div>
             <div class="nav-right">
                 <a href="#about-me">About Me</a>
@@ -20,19 +22,19 @@
             </div>
         </nav>
     </header>
-
+    
     <section id="about-me">
         <div class="about-me-container">
             <img src="images/profile.jpg" alt="Muhammad Akhsanul Zidan" class="about-me-image">
             <div class="about-me-text">
                 <h1>Nice to meet you!</h1>
-                <p>About me - Muhammad Akhsanul Zidan</p>
-                <p>"Technology works with our hope, imagination, and hard work. It turns what was thought to be impossible into the possible." </p>
-                <p>As a passionate Computer Science enthusiast, I thrive on exploring the endless possibilities within technology. With skills in Full Stack Software Development, Artificial Intelligence, and Network Security, I am dedicated to creating innovative solutions. My long journey in technology has been driven by an insatiable curiosity and a desire to make a positive impact.</p>
+                <h3>About me - Muhammad Akhsanul Zidan</h3>
+                <p class="quote">"Technology works with our hope, imagination, and hard work. It turns what was thought to be impossible into the possible." </p>
+                <p class="description">As a passionate Computer Science enthusiast, I thrive on exploring the endless possibilities within technology. With skills in Full Stack Software Development, Artificial Intelligence, and Network Security, I am dedicated to creating innovative solutions. My long journey in technology has been driven by an insatiable curiosity and a desire to make a positive impact.</p>
             </div>
         </div>
     </section>
-
+        
     <section id="tech-stacks">
         <h1>Tech Stacks</h1>
         <div class="tech-grid">
