--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>In the project, I collaborated with a senior software engineer from PT. Hanaang Global Technology to develop an Android tablet application for Toyota Motor Manufacturing Indonesia's tapping operation. Using Flutter for the front-end and Laravel for the back-end, I oversaw the design and implementation of the user interface, database management, and API development. Additionally, I worked on integrating camera functionality to facilitate part identification using OCR with Google API, configured the server environment, conducted operator training, and supervised real-time tapping activities. Throughout, I ensured thorough documentation, testing, and troubleshooting, while also exploring avenues for continuous improvement.  
+            <p class="project-description">I collaborated with a senior software engineer from PT. Hanaang Global Technology to develop an Android tablet application for Toyota Motor Manufacturing Indonesia's tapping operation. I oversaw the <span>design and implementation of the user interface, database management, and API development</span>. Additionally, I worked on integrating <span>camera functionality</span> to facilitate part identification using OCR with Google API, <span>configured the server environment, conducted operator training, and supervised real-time tapping activities</span>.  
             </p>        
         </div>
         <div class="project">
@@ -167,12 +167,13 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>In collaboration with a senior software engineer from PT. Hanaang Global Technology, I spearheaded the development of an administrative website using Flutter and Laravel for Toyota Motor Manufacturing Indonesia's Tapping operation. Responsible for database management, API development, and UI development, I ensured seamless integration of the website data with the mobile application. Additionally, I oversaw the installation on the server, conducted training for administrators and operators, and addressed troubleshooting issues while implementing requested improvements for enhanced functionality. 
+            <p class="project-description">In collaboration with a senior software engineer from PT. Hanaang Global Technology, I was responsible for <span>database management, API development, and UI development</span> of the website.
+                I also ensured seamless <span>integration of the website data with the mobile application</span>. Additionally, I oversaw the <span>installation on the server, conducted training for administrators and operators, and addressed troubleshooting issues </span> while implementing requested improvements for enhanced functionality. 
             </p>        
         </div>
         <div class="project">
             <h3>Toyota Auto Sorting Web App improvement</h3>
-            <h4>Tech stacks: Laravel, MySQL</h4>
+            <h4>Tech stacks: Laravel, JavaScript, MySQL</h4>
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
@@ -185,7 +186,7 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>I did the enhancement of the administrative website for the Auto Sorting unit under the supervision of PT. Hanaang Global Technology. Leveraging Laravel framework, I focused on improving the user interface, data table management, and implementing additional filtering features as per Toyota's requirements. Utilizing Docker for website deployment, I ensured seamless installation and efficient troubleshooting. Furthermore, I conducted training sessions for administrators to familiarize them with the updated features and addressed any issues raised by Toyota officers, ensuring continuous improvement of the system.</p>        
+            <p class="project-description">I did the enhancement of the administrative website for the Auto Sorting unit under the supervision of PT. Hanaang Global Technology. I focused on <span>improving the user interface, data table management, and implementing additional filtering features </span>as per Toyota's requirements. Utilizing Docker for <span>website deployment</span>, I ensured seamless installation and efficient troubleshooting. Furthermore, I conducted <span> training sessions for administrators to familiarize them with the updated features and addressed any issues </span>raised by Toyota officers</p>        
         </div>
         <div class="project">
             <h3>Project Management Mobile App</h3>
@@ -204,7 +205,8 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>In collaboration with a project manager intern at Hanaang Global Technology, I led the development of a project management app, overseeing both front-end and back-end programming. Using Flutter for the front end and Laravel for the back end, I focused on user interface design, database management, and API development. I ensured seamless integration between the front-end screens and back-end data, developing user interface elements, data models, and API routes to facilitate project monitoring, progress tracking, and task assignment. Additionally, I played a key role in improvising the user interface design and expanding the database schema to include workspace management functionalities.
+            <p class="project-description">In collaboration with a project manager intern at Hanaang Global Technology, I developed a project management app, overseeing both front-end and back-end programming. Specifically, I handled the <span>user interface design, database management, and API development</span>.
+                This app enables users to create or join a workspace, which can include multiple users and various projects. Each user can also be linked to a specific project. Projects are made up of multiple activities, and each activity contains several tasks.
             </p>        
         </div>
         <div class="project">
@@ -228,7 +230,7 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>I spearheaded my team in a hackathon organized by BAZNAS with a theme centered on zakat. Leveraging my expertise in both frontend and backend development, I led the creation of a mobile app using Flutter and Laravel. While primarily focused on backend functionalities, I also contributed to certain aspects of the front end. Our app aimed to streamline zakat management for organizations, enabling tasks such as zakat collection and distribution, as well as organizational management, offering a comprehensive solution for zakat administration. Our efforts were recognized, as we proudly secured the 1st runner up position in the competition.</p>        
+            <p class="project-description">I spearheaded my team in a hackathon organized by BAZNAS with a theme centered on zakat. Leveraging my expertise in both frontend and backend development, I led the creation of the mobile app. While primarily focused on backend functionalities such as <span>database and API</span>, I also contributed to certain aspects of the front end such as the data visualization. Our app aimed to streamline zakat management for organizations, enabling tasks such as zakat collection and distribution, as well as organizational management. Our efforts were recognized, as we proudly secured <span>the 1st runner up position</span> in the competition.</p>        
         </div>
         <div class="project">
             <h3>Task and Note making Mobile App</h3>
@@ -245,7 +247,9 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>I and my team developed a task and note-taking app using Flutter for the front end and Laravel for the back end. As the backend developer, I focused on creating and designing the database management system, ensuring efficient storage and retrieval of user data. Additionally, I took charge of integrating the backend with the front end, ensuring seamless communication between the two components. Our collaborative effort resulted in a user-friendly app that streamlined task management and note-taking processes, providing users with an organized and efficient solution for their productivity needs.</p>        
+            <p class="project-description">As the backend developer on the Agile-driven project, I focused on <span>designing and developing the database management system</span> based on the given PRD. Additionally, I took charge of <span>integrating the backend with the front end using APIs.</span> I also <span>presented the app functionalities</span> in front of audiens.
+                The collaborative effort produced an app that enables users to create and manage tasks and notes, offering a solution to meet their productivity needs.
+            </p>        
         </div>
         <div class="project">
             <h3>Mental health Chatbot and Journaling Mobile App
@@ -264,8 +268,10 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>I took the helm of my team in developing a mental health chatbot and journaling app, leveraging Flutter for the front end and Flask for the backend. Our chatbot utilized the DASS-21 dataset and a Support Vector Machine model to predict individuals' mental states, ranging from depression, anxiety, to stress, along with their severity levels from low to high. While the machine learning model has not been fully integrated into the app, this stands as a potential future task. The app provided a platform for users to journal their thoughts and feelings, while the chatbot offered personalized support and guidance based on their mental health assessments. Our collaborative effort aimed to provide accessible mental health resources and support, utilizing innovative technology to enhance well-being.
-            </p>        
+            <p class="project-description">
+                Led a team in <span>creating a machine learning model</span> for mental health state prediction using python, alongside the development of the mobile app, including the <span> development of UI, database, and APIs </span>.
+                The app provided users with a platform to journal their thoughts and feelings. In addition, the machine learning model predicted individuals' mental states, such as depression, anxiety, and stress, along with their severity levels ranging from low to high.
+                The model acted as personalized support to give more effective treatment strategies.</p>        
         </div>
         <div class="project">
             <h3>Inventory Management Web App
@@ -282,7 +288,7 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>I am currently immersed in an ongoing inventory management website project, diligently crafted using Ruby on Rails as its backbone technology. With the aid of Bootstrap for sleek design and JavaScript for dynamic functionality, the website is shaping up to be a robust solution for efficient inventory management. Its structure allows multiple users to join various companies, each of which can possess multiple storage units. Within these storages, users can manage numerous items, track sales, and record purchases, providing a comprehensive platform to streamline inventory operations.
+            <p class="project-description">Developed an inventory management website, including the <span> development of the UI, database, and integration between the two elements</span>. The website's structure allows multiple users to join various companies, each of which can possess multiple storage units. Within these storages, users can manage numerous items, track sales, and record purchases, providing a comprehensive platform to streamline inventory operations.
             </p>        
         </div>
         <div class="project">
@@ -298,7 +304,7 @@
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p>Developed an innovative Android note-taking application reminiscent of traditional
+            <p class="project-description">Developed <span>both front-end and back-end</span> of an innovative Android note-taking application reminiscent of traditional
                 writing on a book. Its features include import PDF files and images, handwriting recognition (using either a hand or stylus pen), writing input (handwriting/typing) with multiple properties, and area selection-remove features</p>        
         </div>
             <!-- Additional projects section -->
