--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#about-me">About Me</a>
                 <a href="#tech-stacks">Tech Stacks</a>
                 <a href="#projects">Projects</a>
-                <a href="#contact">Contact Me</a>
+                <a href="#contacts">Contact Me</a>
             </div>
         </nav>
     </header>
@@ -355,7 +355,7 @@
         <img id="modal-image" class="modal-content" alt="Enlarged Image">
         <div id="modal-caption" class="modal-caption"></div>
     </div>
-    <section id="contact">
+    <section id="contacts">
         <h1>Contact Me</h1>
         <ul class="contact-list">
             <li>
