add ms server and spring

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
                 <p>Laravel</p>
             </div>
             <div class="tech-item">
+                <img src="images/techs/spring.png" alt="Laravel">
+                <p>Spring boot</p>
+            </div>
+            <div class="tech-item">
                 <img src="images/techs/rails.png" alt="Rails">
                 <p>Rails</p>
             </div>
@@ -113,6 +117,10 @@
             <div class="tech-item">
                 <img src="images/techs/postgresql.png" alt="PostgreSQL">
                 <p>PostgreSQL</p>
+            </div>
+            <div class="tech-item">
+                <img src="images/techs/msserver.png" alt="PostgreSQL">
+                <p>MS SQL Server</p>
             </div>
             <div class="tech-item">
                 <img src="images/techs/mongodb.png" alt="MongoDB">
