add project management app

--- a/index.html
+++ b/index.html
@@ -145,6 +145,27 @@
     <section id="projects">
         <h1>Top Projects</h1>
         <div class="project">
+            <h3>Project Management Web App</h3>
+            <h4>Tech stacks: Java Spring, React Js, Microsoft SQL server</h4>
+            <div class="scroll-container">
+                <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
+                    <div class="image-list">
+                        <img src="images/projects/gemash/1.png" class="project-image">
+                        <img src="images/projects/gemash/2.png" class="project-image">
+                        <img src="images/projects/gemash/3.png" class="project-image">
+                        <img src="images/projects/gemash/4.png" class="project-image">
+                        <img src="images/projects/gemash/5.png" class="project-image">
+                        <img src="images/projects/gemash/6.png" class="project-image">
+                        <img src="images/projects/gemash/7.png" class="project-image">
+                        <img src="images/projects/gemash/8.png" class="project-image">
+                        <img src="images/projects/gemash/9.png" class="project-image">
+                    </div>
+                <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
+            </div>
+            <p class="project-description">A versatile Project Management Application designed to streamline teamwork and collaboration, akin to popular tools like ClickUp, Jira, or Microsoft Teams Project Manager. This application empowers users to create, manage, and contribute to multiple workspaces and projects, providing a comprehensive environment for organizing tasks, tracking progress, and fostering collaboration.</span>.  
+            </p>        
+        </div>
+        <div class="project">
             <h3>Toyota Tapping (OCR) Mobile App</h3>
             <h4>Tech stacks: Flutter, Laravel, MySQL</h4>
             <div class="scroll-container">
