Changes figures & description for gemash

--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/gemash/1.png" class="project-image">
-                        <img src="images/projects/gemash/2.png" class="project-image">
-                        <img src="images/projects/gemash/3.png" class="project-image">
-                        <img src="images/projects/gemash/4.png" class="project-image">
-                        <img src="images/projects/gemash/5.png" class="project-image">
-                        <img src="images/projects/gemash/6.png" class="project-image">
-                        <img src="images/projects/gemash/7.png" class="project-image">
-                        <img src="images/projects/gemash/8.png" class="project-image">
-                        <img src="images/projects/gemash/9.png" class="project-image">
+                        <img src="images/projects/gemash/1.jpg" class="project-image">
+                        <img src="images/projects/gemash/2.jpg" class="project-image">
+                        <img src="images/projects/gemash/3.jpg" class="project-image">
+                        <img src="images/projects/gemash/4.jpg" class="project-image">
+                        <img src="images/projects/gemash/5.jpg" class="project-image">
+                        <img src="images/projects/gemash/6.jpg" class="project-image">
+                        <img src="images/projects/gemash/7.jpg" class="project-image">
+                        <img src="images/projects/gemash/8.jpg" class="project-image">
+                        <img src="images/projects/gemash/9.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p class="project-description">A versatile Project Management Application designed to streamline teamwork and collaboration, akin to popular tools like ClickUp, Jira, or Microsoft Teams Project Manager. This application empowers users to create, manage, and contribute to multiple workspaces and projects, providing a comprehensive environment for organizing tasks, tracking progress, and fostering collaboration.</span>.  
+            <p class="project-description"> A versatile project management application akin to popular tools like ClickUp, Jira, or Microsoft Teams Project Manager, this application empowers users to create, manage, and contribute to multiple workspaces and projects, providing a comprehensive environment for organizing tasks and tracking progress. It supports both Kanban and Scrum methodologies, allowing teams to tailor their workflows according to their needs, and includes features like email integration for seamless communication. In this project, I handled the overall development, managing both frontend and backend functionalities to deliver a robust and scalable solution.</span>.  
             </p>        
         </div>
         <div class="project">
