--- a/index.html
+++ b/index.html
@@ -150,15 +150,19 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                     <div class="image-list">
-                        <img src="images/projects/gemash/1.png" class="project-image">
-                        <img src="images/projects/gemash/2.png" class="project-image">
-                        <img src="images/projects/gemash/3.png" class="project-image">
-                        <img src="images/projects/gemash/4.png" class="project-image">
-                        <img src="images/projects/gemash/5.png" class="project-image">
-                        <img src="images/projects/gemash/6.png" class="project-image">
-                        <img src="images/projects/gemash/7.png" class="project-image">
-                        <img src="images/projects/gemash/8.png" class="project-image">
-                        <img src="images/projects/gemash/9.png" class="project-image">
+                        <img src="images/projects/gemash/1.jpg" class="project-image">
+                        <img src="images/projects/gemash/2.jpg" class="project-image">
+                        <img src="images/projects/gemash/3.jpg" class="project-image">
+                        <img src="images/projects/gemash/4.jpg" class="project-image">
+                        <img src="images/projects/gemash/5.jpg" class="project-image">
+                        <img src="images/projects/gemash/6.jpg" class="project-image">
+                        <img src="images/projects/gemash/7.jpg" class="project-image">
+                        <img src="images/projects/gemash/8.jpg" class="project-image">
+                        <img src="images/projects/gemash/9.jpg" class="project-image">
+                        <img src="images/projects/gemash/10.jpg" class="project-image">
+                        <img src="images/projects/gemash/11.jpg" class="project-image">
+                        <img src="images/projects/gemash/12.jpg" class="project-image">
+                        <img src="images/projects/gemash/13.jpg" class="project-image">
                     </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
@@ -335,6 +339,21 @@
             </div>
             <p class="project-description">Developed <span>both front-end and back-end</span> of an innovative Android note-taking application reminiscent of traditional
                 writing on a book. Its features include import PDF files and images, handwriting recognition (using either a hand or stylus pen), writing input (handwriting/typing) with multiple properties, and area selection-remove features</p>        
+        </div>
+        <div class="project">
+            <h3>Learning Management System</h3>
+            <h4>Tech stacks: Java Spring, React Js, PostgreSQL</h4>
+            <div class="scroll-container">
+                <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
+                    <div class="image-list">
+                        <img src="images/projects/ditapro/1.jpg" class="project-image">
+                        <img src="images/projects/ditapro/2.jpg" class="project-image">
+                        <img src="images/projects/ditapro/3.jpg" class="project-image">
+                        <img src="images/projects/ditapro/4.jpg" class="project-image">
+                    </div>
+                <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
+            </div>
+            <p class="project-description">Currently <span>focused on the back-end</span> development of a LMS application that enables a trainer to create programs, assignments, and materials </p>        
         </div>
             <!-- Additional projects section -->
     <div class="other-projects">
