--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#about-me">About Me</a>
                 <a href="#tech-stacks">Tech Stacks</a>
                 <a href="#projects">Projects</a>
-                <a href="#contacts">Contact Me</a>
+                <a href="#contact">Contact Me</a>
             </div>
         </nav>
     </header>
