--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
-            <p class="project-description">Developed <span>both front-end and back-end</span> oa feature-rich Android
+            <p class="project-description">Developed <span>both front-end and back-end</span> of a feature-rich Android
                 note-taking application that combines the familiarity of traditional journaling with modern digital
                 functionality, similar to Microsoft OneNote. The app supports dynamic note-taking, including
                 handwriting, color coding, text formatting, undo/redo, selection tools, and multimedia embedding.</p>
