add money management system

--- a/index.html
+++ b/index.html
@@ -415,6 +415,19 @@
                 trainers manage courses across multiple programs, each with its own set of materials and assignments
             </p>
         </div>
+        <div class="project">
+            <h3>Money Management System</h3>
+            <h4>Tech stacks: .Net, React Js, Oracle SQL, PLSQL, Google Cloud</h4>
+            <div class="scroll-container">
+                <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
+                <div class="image-list">
+                </div>
+                <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
+            </div>
+            <p class="project-description">
+                Handled the full-stack development of a money management system, facilitating user financial management through wallets, categories, and date-based tracking. The App supported Google Authentication, data protection with encryption and authorization, and optimized API data flow.
+            </p>
+        </div>
         <!-- Additional projects section -->
         <div class="other-projects">
             <h2>Other Projects:</h2>
