--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                 <p>Spring</p>
             </div>
             <div class="tech-item">
+                <img src="images/techs/dotnet.jpg" alt="Laravel" loading="lazy">
+                <p>.Net</p>
+            </div>
+            <div class="tech-item">
                 <img src="images/techs/rails.png" alt="Rails" loading="lazy">
                 <p>Rails</p>
             </div>
