--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                 <p>MS SQL Server</p>
             </div>
             <div class="tech-item">
+                <img src="images/techs/msserver.png" alt="PostgreSQL" loading="lazy">
+                <p>Oracle SQL</p>
+            </div>
+            <div class="tech-item">
                 <img src="images/techs/mongodb.png" alt="MongoDB" loading="lazy">
                 <p>MongoDB</p>
             </div>
