--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             </div>
             <div class="tech-item">
                 <img src="images/techs/msserver.png" alt="PostgreSQL" loading="lazy">
-                <p>MS SQL Server</p>
+                <p>MS SQL</p>
             </div>
             <div class="tech-item">
-                <img src="images/techs/msserver.png" alt="PostgreSQL" loading="lazy">
+                <img src="images/techs/oracledb.jpg" alt="PostgreSQL" loading="lazy">
                 <p>Oracle SQL</p>
             </div>
             <div class="tech-item">
