--- a/index.html
+++ b/index.html
@@ -429,11 +429,15 @@
             <div class="scroll-container">
                 <button class="scroll-arrow prev" aria-label="Scroll Left">&lt;</button>
                 <div class="image-list">
+                    <img src="images/projects/sakucermat/1.png" class="project-image" loading="lazy">
+                    <img src="images/projects/sakucermat/2.png" class="project-image" loading="lazy">
                 </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
             <p class="project-description">
-                Handled the full-stack development of a money management system, facilitating user financial management through wallets, categories, and date-based tracking. The App supported Google Authentication, data protection with encryption and authorization, and optimized API data flow.
+                Handled the full-stack development of a money management system, facilitating user financial management
+                through wallets, categories, and date-based tracking. The App supported Google Authentication, data
+                protection with encryption and authorization, and optimized API data flow.
             </p>
         </div>
         <!-- Additional projects section -->
