add more into sakucermat

--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
                 <div class="image-list">
                     <img src="images/projects/sakucermat/1.png" class="project-image" loading="lazy">
                     <img src="images/projects/sakucermat/2.png" class="project-image" loading="lazy">
+                    <img src="images/projects/sakucermat/3.png" class="project-image" loading="lazy">
                 </div>
                 <button class="scroll-arrow next" aria-label="Scroll Right">&gt;</button>
             </div>
